<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Robot bringup launch files</description>

  <maintainer email="azarada552@gmail.com">Aleksei</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>led_control</exec_depend>
  <exec_depend>web_led</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
